# oskar_driver

./: CMakeLists.txt  README.md  display.rviz  package.xml
config/: oskar_params.yaml
docs/: OSKAR III Packet structure description.asciidoc
include/oskar_driver/: board_comms.h  driver.h  motor_plugin.h  moveit_plugin.h  odom_plugin.h  oskar_commands.h  oskar_packet.h  oskar_trajectory_follower.h  plugin.h
launch/: oskar_display.launch  oskar_driver.launch  oskar_moveit_controller_manager.launch
src/: board_comms.cpp  driver.cpp  driver_node.cpp  motor_plugin.cpp  moveit_plugin.cpp  odom_plugin.cpp  oskar_packet.cpp  oskar_trajectory_follower.cpp  plugin.cpp
urdf/: oskar.urdf
